2004-12-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/panedwindow.n: Fix silly typo. [Bug 1087842]

2004-12-19  Chengye Mao  <chengye.geo@yahoo.com>

	* win/tkWin.h, win/tkWinEmbed.h: Make embedding work better on Windows.
	* win/tkWinWm.c, win/tkWinX.c:   [Bugs 222667, 831627, 842945, 1024364]

2004-12-17  Chengye Mao  <chengye.geo@yahoo.com>

	* generic/tkFrame.c:  Make container windows display their
	* generic/tkWindow.c: background when they don't have content.

2004-12-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tk.spec, macosx/Tk-Info.plist, macosx/Wish-Info.plist: 
	* macosx/Wish.pbproj/project.pbxproj, README, win/configure.in: 
	* unix/configure.in, generic/tk.h: Bump version to 8.5a3.

2004-12-09  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: synced with tcl/unix/tcl.m4
	* unix/configure: regen

2004-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock):
	Added guards so that rescanning for the complex-alpha check is not
	done in the common case of creating a simple image a bit at a
	time, or any other time where the image was simple before and the
	input data has no alpha channel. [Bug 1081966]

2004-12-07  Don Porter  <dgp@users.sourceforge.net>

	* tests/canvPs.test:	Cleaned up the matching of [makeFile] and
	* tests/choosedir.test: [removeFile] commands as indicated by the
	* tests/filebox.test:	results of a -debug 1 run of the test suite.
	* tests/imgPPM.test:	Tk test suite is now -debug 1 clean.  This
	* tests/imgPhoto.test:	completes fixing [1078648].
	* tests/listbox.test:
	* tests/main.test:

2004-12-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/bind.test, tests/button.test, tests/canvas.test:
	* tests/cursor.test, tests/scrollbar.test:
	Eliminate all duplicate test names. [Bug 1078648 again]

2004-12-06  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a2 TAGGED FOR RELEASE ***
